@@ -1,5 +1,6 @@
 require 'test/unit'
 require 'tmpdir'
+require 'tempfile'
 
 class TestIO < Test::Unit::TestCase
   def mkcdtmpdir
@@ -27,5 +28,21 @@ class TestIO < Test::Unit::TestCase
         assert_equal(2, f.pos)
       }
     }
+  end
+
+  def make_tempfile
+    t = Tempfile.new("foo")
+    t.binmode
+    t.puts "foo"
+    t.puts "bar"
+    t.puts "baz"
+    t.close
+    t
+  end
+
+  def test_binmode_after_closed
+    t = make_tempfile
+    t.close
+    assert_raise(IOError) {t.binmode}
   end
 end
